auto-test/tests/chapter_14/valid/function_calls/address_of_argument.c
/* Make sure we can take the address of function arguments,
 * not just variables */

int addr_of_arg(int a) {
    int *ptr = &a;
    *ptr = 10;
    return a;
}

int main(void) {
    
    
    int result = addr_of_arg(-20);
    if (result != 10) {
        return 1;
    }

    
    int var = 100;
    result = addr_of_arg(var);
    if (result != 10) {
        return 2;
    }
    if (var != 100) {
        return 3;
    }
    return 0;
}