auto-test/tests/chapter_14/invalid_types/extra_credit/compound_assignment_not_lval.c


int main(void) {
    int i = 100;
    int *ptr = &(i += 200);
    return 0;
}